@@ -1,3 +1,8 @@
+2007-11-08  Martin Lambers <marlam@marlam.de>
+
+	* src/view_area.cpp: Fix export of whole image if it is stored in a
+	CVL_LUM frame.
+
 2007-10-28  Martin Lambers <marlam@marlam.de>
 
 	* src/range_selector.cpp: Fix resetting of histogram bounds for color
